--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-$primary-color: teal;
+$primary-color: #008080;
 
 h1, h2, h3, h4, h5 {
   color: $primary-color;
@@ -11,3 +11,8 @@ h1, h2, h3, h4, h5 {
 .post-preview {
   border-bottom: 3px solid $primary-color;
 }
+
+a, a:visited {
+  color: darken($primary-color, 10%);
+}
+
