--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -16,3 +16,21 @@ a, a:visited {
   color: darken($primary-color, 10%);
 }
 
+article {
+  h1.title {
+    font-style: italic;
+  }
+
+  time {
+  font: {
+    weight: bold;
+    family: Verdana, Geneva, sans-serif;
+    size: 0.8em;
+  }
+}
+
+
+  .body {
+    p { line-height: 1.5em; }
+  }
+}
