--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,6 +1,11 @@
-%h1 My blog
+%nav.title
+  %ul.title-area
+    %h1 My blog
+  %section.top-bar-section
+    %ul.right
 
-= link_to 'New Post', new_post_path
+.button
+  = link_to 'New Post', new_post_path
 
 - @posts.each do |post|
   .post-preview
