--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -6,7 +6,9 @@
   %time{datetime: @post.date.to_s, pubdate: true}= @post.date.to_s(:short)
 
   .body= simple_format(@post.body)
+  .small.button
+    = link_to 'Edit', edit_post_path(@post) 
 
-= link_to 'Edit', edit_post_path(@post)
-\|
-= link_to 'Back', posts_path
+  \|
+  .small.button
+    = link_to 'Back', posts_path
